# spin2note

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  railway.json
.claude/commands/: db-migrate.md  gen-test.md  generate-client.md  parse-validate.md  server-down.md  server-up.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/spin2note_api/: __init__.py  config.py  logging_config.py  main.py  worker.py
apps/api/src/spin2note_api/cache/: __init__.py  redis_queue.py
apps/api/src/spin2note_api/clickhouse/: __init__.py  batcher.py  client.py  migrate.py  native.py  queries.py
apps/api/src/spin2note_api/db/: __init__.py  imports.py  postgres.py
apps/api/src/spin2note_api/domain/: __init__.py  enums.py  ids.py  models.py
apps/api/src/spin2note_api/http/: __init__.py  auth.py  hands.py  health.py  imports.py  stats.py
apps/api/src/spin2note_api/ingest/: __init__.py  archives.py  router.py  storage.py
apps/api/src/spin2note_api/parser/: __init__.py  mapping.py  wrapper.py
apps/api/tests/: test_api.py  test_archives.py  test_batcher.py  test_logging.py  test_migrate.py  test_native.py  test_parser.py  test_queries.py  test_worker.py
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json  railway.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/app/upload/: page.tsx
apps/web/src/: types.d.ts
apps/web/src/components/: app-shell.tsx  uploader.tsx
apps/web/src/components/charts/: cumulative-result.tsx  metric-by-category.tsx  result-by-stack.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  table.tsx
apps/web/src/lib/: api.ts  auth.tsx  bulk-upload.ts  utils.ts
crates/hh-parser/: Cargo.toml  pyproject.toml
crates/hh-parser/src/: equity.rs  lib.rs  model.rs  parser.rs  summary.rs
migrations/clickhouse/: 0001_init.sql  0002_real_parser.sql  0003_dedup_projection.sql  0003_tournament_hero_prize.sql  0004_chip_ev.sql
migrations/postgres/: alembic.ini  env.py
migrations/postgres/versions/: 0001_init.py  0002_imports.py
testdata/3max/: sample.txt
testdata/6max/: sample.txt
testdata/summary/: sample.txt
(+1 files in other folders)
