[package]
name = "hh-parser"
version = "0.1.0"
edition = "2021"
description = "High-performance GGPoker/PokerOK Spin&Gold hand-history parser (PyO3 extension)"

[lib]
name = "hh_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py312"] }

[dev-dependencies]
